--- a/WatchHolder.ini
+++ b/WatchHolder.ini
@@ -4,7 +4,7 @@ module = wsgi:app
 master = true
 processes = 5
 
-socket = main.sock
+socket = WatchHolder.sock
 chmod-socket = 660
 vacuum = true
 
